<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_Us">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:id="@+id/aboutus_toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/pglogo"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="App Version : 1.1.0"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:textColor="#E30E0E"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Developers Info :"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/acme"
            android:textSize="20dp"
            android:layout_margin="12dp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:id="@+id/devloper1"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/devloper_imageview"
                android:src="@drawable/user1"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:civ_border_width="3dp"
                app:civ_border_color="#FCFCFC"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anagha_info"
                android:textSize="16sp"
                android:fontFamily="@font/alegreya_sans"
                android:textColor="#000000"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:id="@+id/devloper2"
            android:layout_marginTop="4dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/devloper_imageview1"
                android:src="@drawable/user13"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:civ_border_width="3dp"
                app:civ_border_color="#FCFCFC"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aarya_info"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:fontFamily="@font/alegreya_sans"
                android:textColor="#000000"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:id="@+id/devloper3"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/deepa"
                android:src="@drawable/user16"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:civ_border_width="3dp"
                app:civ_border_color="#FCFCFC"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pratiksha_info"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:fontFamily="@font/alegreya_sans"
                android:textColor="#000000"
                />

        </LinearLayout>


    </LinearLayout>

</ScrollView>